Fix several FindBugs issues
findbugs-fixes