@@ -344,7 +344,7 @@ public class TestTask implements Serializable {
     public void setTaskPathDeviationOptimal(final String value) {
         if (!StringUtils.isEmpty(value)) {
             try {
-                taskPathDeviationOptimal = Math.round(new Float(value));
+                taskPathDeviationOptimal = Math.round(Float.valueOf(value));
             } catch (final NumberFormatException e) {
                 LOGGER.error("can't parse " + value + " as a float or integer.");
             }
@@ -358,7 +358,7 @@ public class TestTask implements Serializable {
     public void setTaskTimeAvg(final String value) {
         if (!StringUtils.isEmpty(value)) {
             try {
-                taskTimeAvg = new Long(Math.round(new Float(value)));
+                taskTimeAvg = Long.valueOf(Math.round(Float.valueOf((value))));
             } catch (final NumberFormatException e) {
                 LOGGER.error("can't parse " + value + " as a float or integer.");
             }
@@ -372,7 +372,7 @@ public class TestTask implements Serializable {
     public void setTaskTimeStddev(final String value) {
         if (!StringUtils.isEmpty(value)) {
             try {
-                taskTimeStddev = Math.round(new Float(value));
+                taskTimeStddev = Math.round(Float.valueOf(value));
             } catch (final NumberFormatException e) {
                 LOGGER.error("can't parse " + value + " as a float or integer.");
             }
